--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.0.0
-  firebase_auth: ^4.0.0
-  cloud_firestore: ^4.0.0
+  supabase_flutter: ^1.10.18
   flutter_local_notifications: ^15.0.0
+  intl: ^0.18.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
