--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^1.10.18
-  flutter_local_notifications: ^15.0.0
+  awesome_notifications: ^0.9.2
   intl: ^0.18.0
 
 
