--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^1.10.18
-  awesome_notifications: ^0.8.2
-  intl: ^0.18.0
+  flutter_local_notifications: ^17.1.2
+  intl: ^0.19.0
 
 
 
